[gd_scene load_steps=3 format=3 uid="uid://bjlops487kxwv"]

[ext_resource type="Script" path="res://examples/decoding/decode_text.gd" id="1_sa1rc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kpnb4"]

[node name="DecodeText" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sa1rc")

[node name="ResultImage" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 566.0
offset_bottom = 484.0
texture = SubResource("PlaceholderTexture2D_kpnb4")
expand_mode = 1

[node name="InputText" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -522.0
offset_top = -299.0
offset_right = -32.0
offset_bottom = 43.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Text from image would go here"
editable = false

[node name="DecodeButton" type="Button" parent="."]
layout_mode = 2
offset_left = 51.0
offset_top = 508.0
offset_right = 533.0
offset_bottom = 556.0
size_flags_horizontal = 3
text = "Decode Data"

[node name="LoadImageButton" type="Button" parent="."]
layout_mode = 2
offset_left = 51.0
offset_top = 564.0
offset_right = 533.0
offset_bottom = 612.0
size_flags_horizontal = 3
text = "Load Image"

[node name="ImageDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(215, 65)
size = Vector2i(667, 533)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.svg")
use_native_dialog = true

[connection signal="pressed" from="DecodeButton" to="." method="_on_decode_pressed"]
[connection signal="pressed" from="LoadImageButton" to="ImageDialog" method="show"]
[connection signal="file_selected" from="ImageDialog" to="." method="_on_image_dialog_file_selected"]
[connection signal="ready" from="ImageDialog" to="ImageDialog" method="hide"]
